
2017-03-19  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (setup_program_start): moved call to (cb_build_program) to
	  (setup_program), after the PROGRAM-ID has been checked for
	  redefinition (see bug #271).
	* parser.y (file_control_entry): fixed bug #352 by not setting
	  current_file to NULL in invalid SELECT entries.
	* parser.y (file_control_entry): added parser error handler so typos
	  don't define an erroneous SELECT entry.

2017-03-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_check_overlapping): return a possible overlap if at least
	  one of the vars can have an assignment of a different address
	* parser.y (end_scope_of_program_name): fix possible access of NULL var
	* typeck.c [_MSC_VER] (cb_check_overlapping): silence wrong warning 6011

2017-03-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, error.c: fix minor memory leaks in listing / configuration code
	* field.c: fix mismatching memory allocation in picture handling

2017-03-11  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_call): Fixed #353 to correctly emit parameter for
	  CALL BY CONTENT with an INTRINSIC function

2017-03-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: fix #362 one-liner not generating by setting entry_convention

2017-02-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: do (setup_program_start) early in IDENTIFICATION DIVISION
	  if given, otherwise in PROGRAM ID / FUNCTION ID as we did before

2017-02-06  Ron Norman <rjn@inglenet.com>

	* codegen.c:
	  Emit routines cob_file_external_addr,cob_file_malloc,cob_file_free
	  so that 'cob_file' is allocated within libcob
	  This will allow the structure have fields added to the end
	  without forcing a recompile. COB_FILE_VERSION is unchanged
	  Emit cob_module_free so that structure gets freed within libcob

2017-02-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
