@@ -276,6 +276,7 @@ struct list_skip {
 struct list_files {
 	struct list_files	*next;
 	struct list_files	*copy_head;	/* COPY book list head */
+	struct list_files	*copy_tail;	/* COPY book list tail */
 	struct list_error	*err_head;	/* Error message list head */
 	struct list_replace	*replace_head;	/* REPLACE list head */
 	struct list_replace	*replace_tail;	/* REPLACE list tail */
