@@ -1,4 +1,8 @@
 
+2017-03-19  Dave Pitts <dpitts@cozx.com>
+
+	* testsuite.src/listings.at: Added multiple files listing test.
+
 2017-02-21  Dave Pitts <dpitts@cozx.com>
 
 	* testsuite.src/listings.at: Fixed to pass internal cross reference.
